:cactus: user patch added + lil update in login
